--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-    "name": "credit-card-qualifier-pro",
-    "version": "1.0.0",
-    "description": "Advanced credit card matching application with Firebase authentication",
-    "main": "index.html",
-    "scripts": {
-      "start": "python -m http.server 3000"
-    },
-    "keywords": ["credit-card", "finance", "webapp"],
-    "author": "",
-    "license": "MIT",
-    "private": true
+  "name": "credit-card-qualifier",
+  "version": "1.0.0",
+  "description": "Credit card qualifier application with MongoDB backend",
+  "main": "api/index.js",
+  "scripts": {
+    "dev": "node api/index.js",
+    "start": "node api/index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
+}
